# django-env-check

./: .gitignore  README.md  pyproject.toml
env_check/: __init__.py  checker.py
