[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "django-env-check"
version = "0.1.1"
description = "A tiny helper to validate required environment variables for Django."
readme = "README.md"
authors = [
  { name="Kshitij Moghe", email="kshitijmoghe10@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/django-env-check"
